[workspace]
resolver = "2"
members = [
    "clowarden-cli",
    "clowarden-core",
    "clowarden-server"
]

[workspace.package]
version = "0.2.2"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
anyhow = "1.0.100"
as-any = "0.3.2"
askama = "0.14.0"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
cached = { version = "0.56.0", features = ["async"] }
clap = { version = "4.5.49", features = ["derive"] }
clowarden-core = { path = "../clowarden-core" }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = "0.3.31"
hmac = "0.12.1"
hex = "0.4.3"
mime = "0.3.17"
mockall = "0.13.1"
octorust = { git = "https://github.com/tegioz/third-party-api-clients.git" }
openssl = { version = "0.10.74", features = ["vendored"] }
pem = "3.0.6"
postgres-openssl = "0.5.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_qs = "0.15.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.48.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-postgres = { version = "0.7.15", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-time-0_3",
] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["auth", "fs", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
