[package]
name = "clowarden-core"
description = "CLOWarden core"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
as-any = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cached = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
octorust = { workspace = true }
pem = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
