[package]
name = "clowarden-server"
description = "CLOWarden server"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
clowarden-core = { path = "../clowarden-core" }
config = { workspace = true }
deadpool-postgres = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
mime = { workspace = true }
mockall = { workspace = true }
octorust = { workspace = true }
openssl = { workspace = true }
pem = { workspace = true }
postgres-openssl = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
